bdr.BDR.scala.error
Erreur de compilation :
BDR:6: error: type mismatch;
 found   : Unit
 required: Boolean
  if (x="R"){
       ^BDR:10: error: type mismatch;
 found   : Unit
 required: Boolean
  if (x="L"){
       ^BDR:14: error: type mismatch;
 found   : Unit
 required: Boolean
  if (x="I"){
       ^BDR:18: error: type mismatch;
 found   : Unit
 required: Boolean
  if (x="A"){
       ^BDR:21: error: type mismatch;
 found   : Unit
 required: Boolean
  if (x="B"){
       ^BDR:25: error: type mismatch;
 found   : Unit
 required: Boolean
  if (x="C"){
       ^BDR:30: error: type mismatch;
 found   : Unit
 required: Boolean
  if (x="Z"){
       ^BDR:33: error: type mismatch;
 found   : Unit
 required: Boolean
  if (x="Y"){
       ^BDR:37: error: type mismatch;
 found   : Unit
 required: Boolean
  if (x="Z"){
       ^